Fixed alignment of sidebar on Journal page.

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -73,13 +73,25 @@ a:hover {
   justify-content: center;
 }
 
+div#content.site-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.site-main {
+  display: flex;
+  flex-direction: column;
+}
+
 #primary {
-  width: 73%;
+  width: 60%;
 }
 
 #secondary {
-  text-align: right;
-  width: 27%;
+  text-align: left;
+  margin: 0 auto;
+  width: 30%;
+  padding-top: 34px;
 }
 
 #content {
