--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -756,12 +756,26 @@ a:hover {
   -ms-flex-pack: center;
       justify-content: center; }
 
+div#content.site-content {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row; }
+
+.site-main {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column; }
+
 #primary {
-  width: 73%; }
+  width: 60%; }
 
 #secondary {
-  text-align: right;
-  width: 27%; }
+  text-align: left;
+  margin: 0 auto;
+  width: 30%;
+  padding-top: 34px; }
 
 #content {
   display: -ms-flexbox;
